--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <title>Page Title</title>
-    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="grid"></div>
-    
-    <script src="control.js"></script>
 </body>
+<script src="control.js"></script>
 </html>
