add Control panal UI

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="controls">
+        <div id="title">Controls</div>
+        <div>
+            <input type="range" id="gridRes" name="gridRes"
+                   min="2" max="50">
+            <label for="gridRes">Grid Resolution</label>
+        </div>
+        <div id="resCountDisplay">32</div>
+    </div>
     <div id="grid"></div>
 </body>
 <script src="control.js"></script>
