add functionality for resolution change controls

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <div class="controls">
         <div id="title">Controls</div>
         <div>
-            <input type="range" id="gridRes" name="gridRes"
-                   min="2" max="50">
+            <input type="range" id="gridRes" name="gridRes" step="1" min="2" max="50" value="32">
             <label for="gridRes">Grid Resolution</label>
         </div>
-        <div id="resCountDisplay">32</div>
+        <div id="resCountDisplay">Resolution is 32 squares</div>
     </div>
     <div id="grid"></div>
 </body>
