add style to border and text

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <div class="controls">
-        <div id="title">Controls</div>
+        <div id="title">Control</div>
         <div>
             <input type="range" id="gridRes" name="gridRes" step="1" min="2" max="50" value="32">
-            <label for="gridRes">Grid Resolution</label>
         </div>
         <div id="resCountDisplay">Resolution is 32 squares</div>
     </div>
